--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,1 +1,13 @@
-spring.application.name=projectRest
+spring:
+  datasource:
+    url: jdbc:mysql://localhost:3306/rest_spring_course?useSSL=false&serverTimezone=UTC
+    username: root
+    password: 1910
+    driver-class-name: com.mysql.cj.jdbc.Driver
+  jpa:
+     hibernate:
+        ddl-auto: update
+     properties:
+        hibernate:
+        dialect: org.hibernate.dialect.MySQL8Dialect
+        show-sql: false
