--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,5 +11,9 @@ spring:
         hibernate:
         dialect: org.hibernate.dialect.MySQL8Dialect
         show-sql: false
+server:
+  port: 8081
+
+
         
  
