--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/rest_spring_course?useSSL=false&serverTimezone=UTC
+    url: jdbc:mysql://localhost:3306/rest_spring_course
     username: root
     password: 1910
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -13,7 +13,7 @@ spring:
         show-sql: false
         
 server:
-  port: 8081
+  port: 8080
 
 springdoc:
   pathsToMatch: /api/**/v1/**
