--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,8 @@
+security:
+  jwt:
+    token:
+      secret-key: 53cr37
+      expire-length: 36000000
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306/rest_spring_course
